added web analytics and js date

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <script src="https://kit.fontawesome.com/7b6a287b3b.js" crossorigin="anonymous"></script>
 
 <!-- Web Analytics -->
-<!-- <script src="https://www.w3counter.com/tracker.js?id=131372"></script> -->
+<script src="https://www.w3counter.com/tracker.js?id=131372"></script>
 
 </head>
 
@@ -79,7 +79,7 @@
 
 <div class="section center-align">
 	<!-- EDIT COPYRIGHT TEXT BELOW -->
-	<small >Smart Touch Typing &copy; 2020</small>
+	<small >Smart Touch Typing &copy; <span><script>document.write(new Date().getFullYear())</script></span>
 </div>
 
 
