formated index.html, fixed linear gradient on mobile

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 
-<!-- saved from url=(0014)about:internet -->
-<html><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
+<html>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
 
 <!-- RESPONSIVE THING -->
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -82,9 +83,5 @@
 	<small >Smart Touch Typing &copy; <span><script>document.write(new Date().getFullYear())</script></span>
 </div>
 
-
-
-<script>
-</script>
-
-</body></html>
+</body>
+</html>
